# RustyChat

./: Cargo.toml  README.md  package-lock.json
src/: api.rs  app.rs  lib.rs  main.rs  model.rs  state.rs
src/component/: chat_input.rs  chats_view.rs  mod.rs
