[package]
name = "rusty-chat"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7.0" }
leptos_router = { version = "0.7.0" }
axum = { version = "0.7", optional = true }
console_error_panic_hook = "0.1"
leptos_axum = { version = "0.7.0", optional = true }
leptos_meta = { version = "0.7.0" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "trace"], optional = true }
wasm-bindgen = "=0.2.96"
thiserror = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }
http = "1"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = { version = "1.0.94", optional = true}
serde_json = "1.0.133"
futures = "0.3.31"
ollama-rs = { version = "0.2.1", features = ["stream"], optional = true}
comrak = "0.31.0"

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:ollama-rs",
    "dep:tracing-subscriber",
    "dep:axum",
    "dep:tokio",
    "dep:anyhow",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:tracing",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "rusty-chat"

site-root = "target/site"

site-pkg-dir = "pkg"
tailwind-input-file = "style/main.css"
assets-dir = "public"

site-addr = "127.0.0.1:3000"

reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"

env = "DEV"

bin-features = ["ssr"]

bin-default-features = false

lib-features = ["hydrate"]

lib-default-features = false

lib-profile-release = "wasm-release"
